--- a/charts/grafana/values.yaml
+++ b/charts/grafana/values.yaml
@@ -888,7 +888,7 @@ grafana.ini:
   server:
     domain: "{{ if (and .Values.ingress.enabled .Values.ingress.hosts) }}{{ tpl (.Values.ingress.hosts | first) . }}{{ else }}''{{ end }}"
   branding:
-     app_title: "Chart Preview Demo - Grafana"
+     app_title: "Chart Preview Demo 1 - Grafana"
      login_title: "Welcome to Chart Preview Demo"
      login_subtitle: "Deployed via Chart Preview"
 ## grafana Authentication can be enabled with the following values on grafana.ini
